--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="potros.css" />
     <script type="text/javascript" src="index.js"></script>
     <title>Benjamin Uranga | About</title>
   </head>
@@ -12,18 +13,18 @@
     <nav class="nav-menu">
       <a href="index.html"><img id="white-logo" src="portfolio_images/whiteBUlogo.png"></a>
       <ul>
-        <li><a href="">Potros FC</a></li>
-        <li><a href="">Kennesaw State University</a></li>
-        <li><a href="">McEachern HS</a></li>
-        <li><a href="">Misc.</a></li>
+        <li><a href="potros.html">Potros FC</a></li>
+        <li><a href="ksu.html">Kennesaw State University</a></li>
+        <li><a href="mhs.html">McEachern HS</a></li>
+        <li><a href="misc.html">Misc.</a></li>
         <li><a href=""><span id="about-text">About</span></a></li>
       </ul>
       <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <a href="#">Potros FC</a>
-          <a href="#">Kennesaw State University</a>
-          <a href="#">McEachern HS</a>
-          <a href="#">Misc.</a>
+          <a href="potros.html">Potros FC</a>
+          <a href="ksu.html">Kennesaw State University</a>
+          <a href="mhs.html">McEachern HS</a>
+          <a href="misc.html">Misc.</a>
           <a href="#">About</a>
         </div>
         <span class="hamburger" onclick="openNav()">&#9776; </span>
@@ -33,10 +34,16 @@
     <div class="about-image">
         <img class="headshot" src="portfolio_images/headshot.jpg">
         <div class=about-text>
-            <h3>“Some people aint think it be like it is. But it do?" -Abraham Lincoln</h3>
+            <h3>“It is possible to avoid failure, to always be safe. But that is also the route to a dull, uninteresting life.” -Don Norman</h3>
             <h1>About me</h1>
-            <p>Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. Hi, I benji. </p>
+            <p>
+                My name is Benjamin Uranga, and I’m an Interactive Design major with a minor in Technical Communications at Kennesaw State University. My two favorite activities are playing soccer and creating things. The feeling of having an idea then bringing that idea to life is unmatched. There is no better satisfaction than watching something I’ve envisioned being put together piece by piece. I started designing in 2015, where I fell in love with this process. Since then, I’ve taken what I’ve done and learned from all my mistakes and accomplishments in design. Now, I’m seeking to improve upon my skills as a designer and thinker. I wish to learn more about user experience and usability, while also strengthening my design capabilities.
+            </p>
+            <a href="http://www.instagram.com/benjaminurangagraphics" target="blank"><img class="social-img" src="portfolio_images/insta-icon.png"></a>
+            <a href="mailto:benjaminuranga@gmail.com"><img class="social-img" src="portfolio_images/black-email-icon-10.jpg"></a>
+              <p>@benjaminurangagraphics | benjaminuranga@gmail.com</p>
         </div>
     </div>
   </body>
+ 
 </html>
