--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <nav class="nav-menu">
       <ul>
         <li><a href="potros.html">Potros FC</a></li>
-        <li><a href="">Kennesaw State University</a></li>
-        <li><a href="">McEachern HS</a></li>
-        <li><a href="">Misc.</a></li>
+        <li><a href="ksu.html">Kennesaw State University</a></li>
+        <li><a href="mhs.html">McEachern HS</a></li>
+        <li><a href="misc.html">Misc.</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
 
     <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Potros FC</a>
-            <a href="#">Kennesaw State University</a>
-            <a href="#">McEachern HS</a>
-            <a href="#">Misc.</a>
-            <a href="#">About</a>
+            <a href="potros.html">Potros FC</a>
+            <a href="ksu.html">Kennesaw State University</a>
+            <a href="mhs.html">McEachern HS</a>
+            <a href="misc.html">Misc.</a>
+            <a href="about.html">About</a>
           </div>
           <span class="hamburger" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
     <div class="logo-container">
@@ -39,27 +39,49 @@
         <br /><br />
         Work
       </h3>
-      <i class="arrow down"></i></p>
+      <a href="#sections"><i class="arrow down"></i></p></a>
     </div>
 
-    <div class="sections">
+    <div id="sections" class="sections">
+      <a href="potros.html">
       <div class="img-text">
-        <img class="potros gradient" src="portfolio_images/frontpage/final-potros-logo.jpg"> 
+        <div class="image-container">
+          <img class="potros" src="portfolio_images/frontpage/final-potros-logo.jpg"> 
+        </div>
         <h1 class="centered">Potros</h1>
+      </a>
       </div>
-      <div class="gradient"></div>
+      <a href="ksu.html">
       <div class="img-text">
-        <img class="ksu" src="portfolio_images/frontpage/KSsignComp_v3.jpg">
+        <div class="image-container">
+          <img class="ksu" src="portfolio_images/frontpage/KSsignComp_v3.jpg">
+        </div>
         <h1 class="centered">Kennesaw State University</h1>
+      </a>
       </div>
+      <a href="mhs.html">
       <div class="img-text">
-        <img class="mhs" src="portfolio_images/frontpage/mhssoccerlogo.jpg">
+        <div class="image-container">
+          <img class="mhs" src="portfolio_images/frontpage/mhssoccerlogo.jpg">
+        </div>
         <h1 class="centered">McEachern High School</h1>
+      </a>
       </div>
+      <a href="misc.html">
       <div class="img-text">
-        <img class="goku" src="portfolio_images/frontpage/gokupoly.jpeg">
+        <div class="image-container">
+          <img class="goku" src="portfolio_images/frontpage/gokupoly.jpeg">
+        </div>
         <h1 class="centered">Miscellaneous</h1>
+      </a>
       </div>
     </div>
+
   </body>
+  <footer class="footer">
+      <hr>
+        <a href="http://www.instagram.com/benjaminurangagraphics" target="blank"><img class="social-img" src="portfolio_images/insta-icon.png"></a>
+        <a href="mailto:benjaminuranga@gmail.com"><img class="social-img" src="portfolio_images/black-email-icon-10.jpg"></a>
+          <p>@benjaminurangagraphics | benjaminuranga@gmail.com</p>
+    </footer>
 </html>
