--- a/potros.html
+++ b/potros.html
@@ -17,10 +17,10 @@
         <li>
           <a href=""><span id="about-text">Potros FC</span></a>
         </li>
-        <li><a href="">Kennesaw State University</a></li>
-        <li><a href="">McEachern HS</a></li>
-        <li><a href="">Misc.</a></li>
-        <li><a href="">About</a></li>
+        <li><a href="ksu.html">Kennesaw State University</a></li>
+        <li><a href="mhs.html">McEachern HS</a></li>
+        <li><a href="misc.html">Misc.</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -42,7 +42,7 @@
 
     <div class="potros-headings">
       <h2>First Logo and Uniform</h2>
-      <p>
+      <p class="description-text">
         Potros FC started as a recreational youth soccer team. The first logo
         and uniform were simple but still gave the team an identity.
       </p>
@@ -54,49 +54,58 @@
     </div>
     <div class="potros-headings">
       <h2>Transitioning into an amateur club</h2>
-      <p>
+      <p class="description-text">
         After my brother and I no longer qualified to play youth soccer, we
         decided to make Potros FC into a serious club to compete in the Atlanta
         District Amateur Soccer League (ADASL). In this transition, we decided
         to rebrand.
       </p>
       <div class="potros-images">
-        <img
-          id="first-logo"
-          src="portfolio_images/potros/final-potros-logo.jpg"
+        <img id="second-logo" src="portfolio_images/potros/final-potros-logo.jpg"
         />
-        <img id="first-uniform" src="portfolio_images/potros/img_3087.jpg" />
+        <img id="second-uniform" src="portfolio_images/potros/img_3087.jpg" />
       </div>
       <hr />
     </div>
     <div class="potros-headings">
       <h2>Expansion</h2>
-      <p>
+      <p class="description-text">
         After a successful first season, we wanted to expand as a club by
         holding tryouts and obtaining sponsors for the club.
       </p>
       <div class="potros-images">
-        <img id="first-logo" src="portfolio_images/potros/tryouts.jpg" />
-        <img id="first-uniform" src="portfolio_images/potros/sponsoredad.jpg" />
+        <img id="tryout-flyer" src="portfolio_images/potros/tryouts.jpg" />
+        <img id="sponsorship-graphic" src="portfolio_images/potros/sponsoredad.jpg" />
       </div>
       <hr />
     </div>
     <div class="potros-headings">
       <h2>Customized Uniforms</h2>
-      <p>
+      <p class="description-text">
         To have a stronger sense of identity for the club, we thought it would
         be beneficial to have unique uniforms from the rest of the clubs in
         Atlanta. I designed a few concepts before making a final decision to be
         produced by Icarus FC, a company that prints custom soccer uniforms.
       </p>
       <div class="potros-images">
-        <img id="first-logo" src="portfolio_images/potros/conceptkits.png" />
-        <p>
+        <img id="uniform-designs" src="portfolio_images/potros/conceptkits.png" />
+        <p class="description-text" id="final-uniforms">
+          <br><br>
           We made a final decision for a white jersey, black jersey, and a
           training jersey to be sent to Icarus FC to be printed. Here are the
           final uniforms.
+          <div class="printed-uniforms">
+            <img id="white-printed-uniforms" src="portfolio_images/potros/IMG_2283.JPG" />
+            <img id="black-printed-uniforms" src="portfolio_images/potros/IMG_2484.JPG" />
+          </div>
         </p>
       </div>
     </div>
+    <footer class="footer">
+        <hr>
+          <a href="http://www.instagram.com/benjaminurangagraphics" target="blank"><img class="social-img" src="portfolio_images/insta-icon.png"></a>
+          <a href="mailto:benjaminuranga@gmail.com"><img class="social-img" src="portfolio_images/black-email-icon-10.jpg"></a>
+            <p>@benjaminurangagraphics | benjaminuranga@gmail.com</p>
+      </footer>
   </body>
 </html>
